<resources>
    <string name="app_name">Messenger</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="fullname">Fullname</string>
    <string name="signup">Sign up</string>
</resources>