<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".core.authentication.view.LoginActivity">

    <ImageView
        android:layout_weight="1"
        android:id="@+id/img_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/icon_messenger" />

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:layout_marginVertical="10dp"
            android:background="@drawable/text_input_background"
            android:id="@+id/input_email"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/dark_gray"
            app:boxStrokeWidthFocused="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:background="@drawable/text_input_background"
            android:id="@+id/input_pass"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/dark_gray"
            app:boxStrokeWidthFocused="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_pass"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_marginVertical="10dp"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/btn_forgot"
            android:textColor="@color/dark_gray"
            android:text="@string/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_create"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/create_new_account"
            android:textColor="@color/dark_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/meta_logo"
            android:layout_width="match_parent"
            app:tint="@color/dark_gray"
            android:importantForAccessibility="no"
            android:layout_height="48dp"     />

    </LinearLayout>


</LinearLayout>